--- a/MeusInvestimentosApi/MeusInvestimentosApi/MeusInvestimentosApi.csproj
+++ b/MeusInvestimentosApi/MeusInvestimentosApi/MeusInvestimentosApi.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Models\RendaFixa.cs~RFa95359.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.15" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.1.4" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.1.4" />
