--- a/MeusInvestimentosApi/MeusInvestimentosApi/appsettings.Development.json
+++ b/MeusInvestimentosApi/MeusInvestimentosApi/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "Program": {
+    "TesouroDiretoBaseURL": "http://www.mocky.io/v2/5e3428203000006b00d9632a",
+    "RendaFixaBaseURL": "http://www.mocky.io/v2/5e3429a33000008c00d96336",
+    "FundosBaseURL": "http://www.mocky.io/v2/5e342ab33000008c00d96342"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
