--- a/MeusInvestimentosApi/MeusInvestimentosApi/appsettings.Development.json
+++ b/MeusInvestimentosApi/MeusInvestimentosApi/appsettings.Development.json
@@ -5,8 +5,8 @@
     "TesouroDiretoBaseURL": "http://www.mocky.io/v2/5e3428203000006b00d9632a",
     "RendaFixaBaseURL": "http://www.mocky.io/v2/5e3429a33000008c00d96336",
     "FundosBaseURL": "http://www.mocky.io/v2/5e342ab33000008c00d96342",
-    "Taxas": {
-      "Fundos" :  "15",
+    "TaxasIR": {
+      "Fundos": "15",
       "LCI": "5",
       "TesouroDireto": "10"
     }
