--- a/MeusInvestimentosApi/MeusInvestimentosApi/MeusInvestimentosApi.csproj
+++ b/MeusInvestimentosApi/MeusInvestimentosApi/MeusInvestimentosApi.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>49fdfda1-491e-4479-bc70-d19cdc8b3e25</UserSecretsId>
+    <ApplicationInsightsResourceId>/subscriptions/3f5f592d-05f8-414f-8f0e-29ee9e90968d/resourceGroups/Apps/providers/microsoft.insights/components/meus-investimentos</ApplicationInsightsResourceId>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -13,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.17.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.15" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="5.0.1" />
     <PackageReference Include="Polly" Version="7.2.2" />
@@ -20,6 +23,12 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.1.4" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.1.4" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="MeusInvestimentosApi.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 
