--- a/MeusInvestimentosApi/MeusInvestimentosApi/appsettings.Development.json
+++ b/MeusInvestimentosApi/MeusInvestimentosApi/appsettings.Development.json
@@ -5,10 +5,16 @@
     "TesouroDiretoBaseURL": "http://www.mocky.io/v2/5e3428203000006b00d9632a",
     "RendaFixaBaseURL": "http://www.mocky.io/v2/5e3429a33000008c00d96336",
     "FundosBaseURL": "http://www.mocky.io/v2/5e342ab33000008c00d96342",
-    "TaxasIR": {
+    "TaxasIR1": {
       "Fundos": "15",
       "LCI": "5",
       "TesouroDireto": "10"
+    }
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "7e2cba51-a290-4561-8157-ef1517aea9dc",
+    "LogLevel": {
+      "Default": "Information"
     }
   },
   "Logging": {
